Phase 7 started: Enhance frontend UI and functionality: Update title to 'Fusion+Bridge', implement dark mode support in Tailwind configuration, and refactor App component to include routing for Bridge, Recovery, and History pages. Improve BridgeForm component with new state management for token swaps and order creation, and enhance styling for better user experience.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FusionBridge - Cross-chain Token Bridge</title>
+    <title>Fusion+Bridge - Cross-chain Token Bridge</title>
     <meta name="description" content="Secure cross-chain token swaps between Ethereum and Stellar using HTLC technology" />
+    <style>
+      html, body, #root {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      
+      body {
+        background: #0d111c;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
