Rename project from FusionBridge to OverSync, updating all relevant files including package.json, README.md, and frontend components. Adjust descriptions, repository URLs, and author names to reflect the new branding. Enhance UI elements and styles for consistency with the new branding, including logo updates and color scheme adjustments.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/oversync-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fusion+Bridge - Cross-chain Token Bridge</title>
-    <meta name="description" content="Secure cross-chain token swaps between Ethereum and Stellar using HTLC technology" />
+    <title>OverSync - Cross-chain Token Bridge</title>
+    <meta name="description" content="Secure cross-chain token swaps between Ethereum and Stellar using HTLC technology. Powered by OverBlock." />
     <style>
       html, body, #root {
         height: 100%;
